# stock-evaluator

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-and-test.yml  test.yml
src/: backtest_engine.py  data_loader.py  kpi_calculator.py  research_tool.py  score_engine.py
src/models/: financials.py  kpis.py  stock.py
tests/: test_backtest.py  test_backtester_skip_empty.py  test_data_loader.py  test_data_loader_cache.py  test_data_loader_fallback_parse.py  test_data_loader_github_fallback.py  test_data_loader_read_html_fail.py  test_data_loader_sanity.py  test_data_loader_timestamps.py  test_export_scores_finite.py  test_kpi_calculator.py  test_kpi_debt_to_equity.py  test_metrics.py  test_research_tool_export.py  test_research_tool_export_xlsx.py  test_scoring.py  test_scoring_nan_values.py  test_scoring_reset.py
