[project]
name = "stock-evaluator"
version = "0.1.0"
description = ""
authors = [
    {name = "Mario Kohlhoff",email = "mario.kohlhoff@edag.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=1.0,<2.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "stock_evaluator", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^25.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
